[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "harmonysite"
version = "0.0.3"
authors = [
  { name="JonJump", email="daviesjpuk@gmail.com" },
]
description = "access to the HarmonySite api from python"
readme = "README.md"
license = { file="LICENCE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jonjump/harmonysite"
"Bug Tracker" = "https://github.com/jonjump/harmonysite/issues"
